--- a/index.html
+++ b/index.html
@@ -20,5 +20,35 @@
     			<h1>Payment</h1>
     		</div>
     	</header>
+    	<aside>
+    		<form>
+
+    			<div class="flex">
+    				<input  class="cardnr" type="text" name="cardnr" placeholder="XXXX XXXX XXXX XXXX">
+    				<input class="expiry" type="tel" placeholder="MM / YY" maxlength="7" x-autocompletetype="cc-exp" autocompletetype="cc-exp" autocorrect="off" spellcheck="off" autocapitalize="off">
+    			</div>
+    			<div class="flex">
+    				<input class="name" type="text" name="name" placeholder="JOHN DOE" autocapitalize="on">
+    				<input  class="cvc" type="number" name="CVC" placeholder="555">
+    			</div>
+    		</form>
+    	</aside>
+    	<main>
+    		<div class="flex">
+    			<h2>Product 1</h2>
+    			<h2>10€</h2>
+    		</div>
+    		<div class="flex">
+    			<h2>Product 2</h2>
+    			<h2>20€</h2>
+    		</div>
+    		<div class="flex">
+    			<h3>Total</h3>
+    			<h1>30€</h1>
+    		</div>
+    	</main>
+    	<footer>
+
+    	</footer>
     </body>
 </html>
