--- a/index.html
+++ b/index.html
@@ -20,39 +20,41 @@
     			<h1>Payment</h1>
     		</div>
     	</header>
-    	<aside>
+    	<aside class="grow">
     		<form>
 
     			<div class="flex form">
     				<input  class="cardnr" type="text" name="cardnr" placeholder="XXXX XXXX XXXX XXXX">
     				<input class="expiry" type="tel" placeholder="MM / YY" maxlength="7" x-autocompletetype="cc-exp" autocompletetype="cc-exp" autocorrect="off" spellcheck="off" autocapitalize="off">
     			</div>
-    			<div>
+    			<div class="flex joon">
     				<div class="line l1"></div>
-    				<div class="line"></div>
+    				<div class="line l2"></div>
     			</div>
     			<div class="flex form">
     				<input class="name" type="text" name="name" placeholder="JOHN DOE" autocapitalize="on">
     				<input  class="cvc" type="number" name="CVC" placeholder="555">
     			</div>
     			<div>
-    				<div class="line"></div>
-    				<div class="line"></div>
+    				<div class="line l3"></div>
+    				<div class="line l4"></div>
     			</div>
     		</form>
     	</aside>
-    	<main>
+    	<main class="hope">
     		<div class="flex product">
-    			<h2>Product 1</h2>
-    			<h2 class="margin">10€</h2>
+    			<h3>Product 1</h3>
+    			<h3 class="margin">10€</h3>
     		</div>
+    		<div class="line l5"></div>
     		<div class="flex product">
-    			<h2>Product 2</h2>
-    			<h2 class="margin">20€</h2>
+    			<h3>Product 2</h3>
+    			<h3 class="margin">20€</h3>
     		</div>
+    		<div class="line l5"></div>
     		<div class="flex product">
-    			<h3>Total</h3>
-    			<h1 class="margin">30€</h1>
+    			<h2>Total</h2>
+    			<h2 class="margin">30€</h2>
     		</div>
     	</main>
     	<footer>
@@ -61,5 +63,6 @@
     		</div>
     		<h3>></h3>
     	</footer>
+    	</div>
     </body>
 </html>
