--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     	<meta charset="utf-8">
     </head>
     <body>
-    	<header>
+    	<section class="header">
     		<div class="flex banner">
     			<div>
     				<h3><</h3>
@@ -19,8 +19,8 @@
     		<div>
     			<h1>Payment</h1>
     		</div>
-    	</header>
-    	<aside class="grow">
+    	</section>
+    	<section class="aside grow">
     		<form>
 
     			<div class="flex form">
@@ -40,8 +40,8 @@
     				<div class="line l4"></div>
     			</div>
     		</form>
-    	</aside>
-    	<main class="hope">
+    	</section>
+    	<section class="main hope">
     		<div class="flex product">
     			<h3>Product 1</h3>
     			<h3 class="margin">10€</h3>
@@ -56,13 +56,14 @@
     			<h2>Total</h2>
     			<h2 class="margin">30€</h2>
     		</div>
-    	</main>
-    	<footer>
-    		<div>
-    			<h1>Continue</h1>
+    	</section>
+    	<section class="footer">
+    		<div class="yeet">
+
+	    			<h1>Continue</h1>
+	    		<h3>></h3>
     		</div>
-    		<h3>></h3>
-    	</footer>
+    	</section>
     	</div>
     </body>
 </html>
